# Zapoctovy-projekt-Vedecka-Kalkulacka

./: CMakeLists.txt
kalkulator/: CMakeLists.txt  kalkulator.cpp  kalkulator.h
